[gd_scene load_steps=2 format=3 uid="uid://mode_select_001"]

[ext_resource type="Script" path="res://scripts/mode_select.gd" id="1"]

[node name="ModeSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT DIFFICULTY"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="EasyButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EASY
8 Cards"

[node name="MediumButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MEDIUM
16 Cards"

[node name="HardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HARD
24 Cards"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "BACK"
